# fdua-competition-v2

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  todo
.github/workflows/: test.yml
docs/: query.md
fdua-competition/: pyproject.toml
fdua-competition/fdua_competition/: pdf_to_text.py  read_pdf.py  utils.py  vectorize.py
fdua-competition/tests/: test_vectorize.py
fdua_competition/: answer_query.py  baes_models.py  chain.py  chat.py  cleanse.py  embeddings.py  enums.py  get_version.py  index_document.py  index_documents.py  index_pages.py  langchain.py  logging_config.py  main.py  merge_results.py  models.py  parser.py  pdf_handler.py  pdf_to_text.py  rag.py  read_answer_examples.py  reference.py  refine_query.py  tools.py  utils.py  vectorize.py  vectorstore.py
fdua_competition/prompts/: information_extractor.txt  research_assistant.txt  retrieval_assistant.txt
notebooks/: examples.ipynb  graph.ipynb  playground.ipynb
result/: result.md  result_20250127_2221.md  result_20250127_2348.md  result_20250128_0011.md  result_20250128_1241.md  result_20250128_1439.md  result_20250128_2235.md  result_20250128_2251.md  result_20250128_2254.md  result_20250128_2357.md  result_20250129_0008.md
tests/: test_assets.py  test_azure_openai.py  test_chain.py  test_chat.py  test_main.py  test_models.py  test_parser.py  test_pdf_handler.py  test_pdf_to_text.py  test_rag.py  test_secrets.py  test_utils.py  test_vectorize.py  test_vectorstore.py
tests/assets/: query.csv
