[project]
name = "fdua-competition"
version = "0.1.0"
description = ""
authors = [
    {name = "yoichi ojima",email = "yoichiojima@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdfium2 (>=4.30.1,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"

